Update pydantic notebook, first draft of ipyautoui

--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -10,14 +10,14 @@
     "\n",
     "\n",
     "## TO DO IN THIS NOTEBOOK\n",
-    "- [ ] Note the problem of data validation and the complexity of the multiple observers pattern needed to handle that even for this relatively simple dashboard. We want to improve our previous dashboard by better handling data validation and more easily handling the generation of the settings UI.\n",
-    "- [ ] Introduce classes\n",
-    "- [ ] Use of type annotation in dataclasses and data validation in Python (?)\n",
-    "- [ ] Introduce type annotations\n",
-    "- [ ] Introduce Pydantic\n",
-    "- [ ] Show how to define a Pydantic model and use it to \n",
-    "  - [ ] validate data using a Pydantic model\n",
-    "  - [ ] express constraints of smoothing window/order in pydantic\n",
+    "- [x] Note the problem of data validation and the complexity of the multiple observers pattern needed to handle that even for this relatively simple dashboard. We want to improve our previous dashboard by better handling data validation and more easily handling the generation of the settings UI.\n",
+    "- [x] Introduce classes\n",
+    "- [x] Use of type annotation in dataclasses and data validation in Python (?)\n",
+    "- [x] Introduce type annotations\n",
+    "- [x] Introduce Pydantic\n",
+    "- [x] Show how to define a Pydantic model and use it to \n",
+    "  - [x] validate data using a Pydantic model\n",
+    "  - [x] express constraints of smoothing window/order in pydantic\n",
     "- [ ] Mention other features of Pydantic that may be relevant to our dashboard\n",
     "- [ ] Have them migrate the existing data validation in the dashboard project to pydantic (might require a lot of refactoring of the code)"
    ]
@@ -46,7 +46,7 @@
     "\n",
     "These attributes also have some important constraints:\n",
     "\n",
-    "+ The `window_size` should be an integer larger than one.\n",
+    "+ The `window_size` should be an integer larger than one and, to match our earlier example, less than or equal to 100.\n",
     "+ The `polynomial_order` should be an integer less than or equal to 10, and less than the `window_size`.\n"
    ]
   },
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not much going on here, but we do at least get a docstring:"
+    "There is not much going on here, but we do at least get a docstring:"
    ]
   },
   {
@@ -99,7 +99,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we write a class with a single attribute, called `year_range`. This is not the most compact or efficient a class that simply has one attribute could be written, but that is deliberate. Understanding the \"plainest\" well to do this will help motivate some of the shortcuts we see in a little bit."
+    "Next, we write a class with a single attribute, called `year_range`. This is not the most compact or efficient way that a class that simply has one attribute could be written, but that is deliberate. Understanding the \"plainest\" way to do this will help motivate some of the shortcuts we see in a little bit.\n",
+    "\n",
+    "This class has a method called `__init__` that is called when the class is created. It is one of many special methods (called \"magic\" methods) recognized by Python.\n",
+    "\n",
+    "The `print` statement in the `__init__` is there to make it easier to see when it is called."
    ]
   },
   {
@@ -113,7 +117,8 @@
     "    Partial implementation of a class to hold a data selector widget.\n",
     "    \"\"\"\n",
     "    def __init__(self, year_range_input=(1800, 2000)):\n",
-    "        self.year_range = year_range_input"
+    "        self.year_range = year_range_input\n",
+    "        print(f\"In __init__, {year_range_input=} and {self.year_range=}\")"
    ]
   },
   {
@@ -253,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `dataclass`: a more compact standard Python approach\n",
+    "## `dataclass`: a more compact plain Python approach\n",
     "\n",
     "Writing a class with multiple attributes gets repetitive in Python. Each attribute typically comes with an argument to the class and lines of boilerplate code to set the attributes of the class to the those arguments.\n",
     "\n",
@@ -282,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is already much more compact than the initial class definition above, but it also comes with some extras:"
+    "This is already much more compact than the initial class definition above. Python automatically creates an `__init__` method for this class that sets the class up. It also comes with some extras:"
    ]
   },
   {
@@ -387,11 +392,11 @@
     "\n",
     "+ It is less code.\n",
     "+ It has a human-readable string representation.\n",
-    "+ You can check whether instanses of the class are equal.\n",
+    "+ You can check whether instances of the class are equal.\n",
     "\n",
-    "We could have done those last two things without `dataclass` by defining a couple of special methods methods in our class definition. It is really nice to just have it happen automatically behind the scnese, though!\n",
+    "We could have done those last two things without `dataclass` by defining a couple of special methods methods in our class definition. It is really nice to just have it happen automatically behind the scenes, though!\n",
     "\n",
-    "*Note:* There is much more to data classes than we have covered. Read more about them XXX or YYY."
+    "*Note:* There is much more to data classes than we have covered. Read more about them XXX or in the [Python documentation](https://docs.python.org/3/library/dataclasses.html)."
    ]
   },
   {
@@ -400,7 +405,7 @@
    "source": [
     "## Progress check\n",
     "\n",
-    "The data class was relatively straightforward and looks promising:\n",
+    "The data class was relatively straightforward to write and looks promising for representing our controls:\n",
     "\n",
     "```python\n",
     "@dataclass \n",
@@ -429,10 +434,19 @@
     "\n",
     "The `pydantic` library solves several of our problems and gets us a few more abilities for free:\n",
     "\n",
-    "+ It is designed to help enforce type requirements. It can do its best to convert values for you or not, at your discretion.\n",
+    "+ It is designed to help enforce type requirements. It can do its best to convert values for you, or not if you prefer that.\n",
     "+ Simple constraints like \"this number must be greater than or equal to two\" are easy to express.\n",
     "+ More complicated constraints like \"this number must be smaller than this other one\" are possible to express.\n",
     "+ It is straightforward to save objects to disk."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| default_exp widgets_pydantic"
    ]
   },
   {
@@ -441,7 +455,7 @@
    "source": [
     "### Making a class using pydantic\n",
     "\n",
-    "One way to use pydantic is to import a class called `BaseModel` from it and subclass that. It ends up looking a lot like a data class:"
+    "One way to use pydantic to make a class is to import a class called `BaseModel` from it and subclass that. It ends up looking a lot like a data class:"
    ]
   },
   {
@@ -512,6 +526,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that `window_size` has been set to a string, not an integer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "However, pydantic can be configured to check types when values are assigned by using the `validate_assignment` configuration. There are many more options available in [pydantic configuration](https://docs.pydantic.dev/latest/concepts/config/)."
    ]
   },
@@ -525,6 +546,13 @@
     "    year_range: tuple = (1800, 2000)\n",
     "    window_size: int = 2\n",
     "    polynomial_order: int = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now an exception is raised when we try to assign a string to `window_size`."
    ]
   },
   {
@@ -543,7 +571,7 @@
    "source": [
     "### More specific constraints on types\n",
     "\n",
-    "You might be surprised to see that the line below works:"
+    "You might be surprised to see that the line below works."
    ]
   },
   {
@@ -577,6 +605,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With this change, trying to assign `(\"eightteen eighty 5\", 8+5j)` to `window_size` will fail."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -594,12 +629,12 @@
     "\n",
     "*Attributes in a pydantic model are typically called fields, terminology we will use for the remainder of the notebook.*\n",
     "\n",
-    "We have made some progress but we still have not imposed the constraints on window size and polynomial order. There are a couple new concepts we need to do that.\n",
+    "We have made some progress but we still have not imposed the constraints on window size and polynomial order. There are a couple new concepts we need to do that:\n",
     "\n",
     "+ `Annotated` from Python's typing system lets you add additional information about the type of an item. Here we will use it to add information about the constraint on a field.\n",
-    "+ The `Field` class from pydantic is a class you use to add that extra information. It is similar to the `Field` class from Python's data classes where it serves a similar purpose.\n",
+    "+ The `Field` class from pydantic is a class you use to add that extra information. There are a number of possible arguments to `Field`. Here we use `ge`, short for \"greater than or equal to,\" to impose the constraint that the `window_size` be larger greater than or equal to 2. The `Field` class from `pydantic` is somewhat similar to the [`field` class from Python's data classes](https://docs.python.org/3/library/dataclasses.html#dataclasses.field) which also serves the purpose of adding information about a typed field.\n",
     "\n",
-    "In the cell below we define a pydantic model that imposes the constraint that the `window_size` must be greater than or equal to 2."
+    "In the cell below we define a pydantic model that imposes the constraint that the `window_size` must be greater than or equal to 2. It does that by annotating the `window_size` type, `int`, with `Field(ge=2)`."
    ]
   },
   {
@@ -674,9 +709,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With these changes we have some of the constraints we want. There is one more thing we need to do: the polynomial order should be less than the window size in addition to being 10 or smaller.\n",
+    "With these changes we have some of the constraints we want. \n",
     "\n",
-    "To do that we will add a model validator to our pydantic class. The model validator has access to all of the proposed model values and can check them in whatever way it wants. If the values are acceptable then the method returns `self`. If the values are not acceptable then the validator should raise a `ValueError`.\n",
+    "There is one more thing we need to do: the polynomial order should be less than the window size in addition to being 10 or smaller.\n",
+    "\n",
+    "To do that we will add a *model validator* to our pydantic class. The model validator has access to all of the proposed model values and can check them in whatever way it wants. If the values are acceptable then the method returns `self`. If the values are not acceptable then the validator should raise a `ValueError`.\n",
     "\n",
     "A draft class with the model validator is below."
    ]
@@ -687,9 +724,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pydantic import model_validator\n",
+    "#| export\n",
     "\n",
-    "class DataSelectorModelDraft5(BaseModel, validate_assignment=True):\n",
+    "from typing import Annotated\n",
+    "from pydantic import model_validator, BaseModel, Field"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "class DataSelectorModelDraft6(BaseModel, validate_assignment=True):\n",
     "    year_range: tuple[int, int] = (1800, 2000)\n",
     "    window_size: Annotated[int, Field(ge=2, le=100)] = 2\n",
     "    polynomial_order: Annotated[int, Field(ge=1, le=10)] = 1\n",
@@ -714,7 +763,7 @@
    "source": [
     "### Exercise\n",
     "\n",
-    "Check whether the new validation works by creating a valid `DataSelectorModelDraft5` and then trying to set the `polynomial_order` or `window_size` to inconsistent values. "
+    "1. Check whether the new validation works by creating a valid `DataSelectorModelDraft6` and then trying to set the `polynomial_order` or `window_size` to inconsistent values. "
    ]
   },
   {
@@ -723,7 +772,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataSelectorModelDraft5()"
+    "DataSelectorModelDraft6()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Use nbdev to export the code we want to reuse from this notebook "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nbdev.export import nb_export\n",
+    "\n",
+    "nb_export('03a_pydantic.ipynb', 'dashboard')"
    ]
   },
   {
