Add serialization to pydantic notebook

--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -508,6 +508,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "There a few ways of making an instance of a pydantic model:\n",
+    "\n",
+    "1. Provide arguments when you call the class; this is what we did above.\n",
+    "2. From a dictionary of values, using the class method `model_validate`.\n",
+    "3. From json.\n",
+    "\n",
+    "We will come back to the third way later in the notebook. An example of the second way is below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_choices = {\n",
+    "    \"year_range\": (1900, 1950),\n",
+    "    \"window_size\": 10,\n",
+    "    \"polynomial_order\": 2,\n",
+    "}\n",
+    "\n",
+    "DataSelectorModelDraft1.model_validate(my_choices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imposing constraints after object creation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "By default, pydantic imposes its constraints only when you create the object. Consider this example:"
    ]
   },
@@ -571,7 +606,7 @@
    "source": [
     "### More specific constraints on types\n",
     "\n",
-    "You might be surprised to see that the line below works."
+    "You might be surprised to see that the line below raises no error."
    ]
   },
   {
@@ -629,10 +664,10 @@
     "\n",
     "*Attributes in a pydantic model are typically called fields, terminology we will use for the remainder of the notebook.*\n",
     "\n",
-    "We have made some progress but we still have not imposed the constraints on window size and polynomial order. There are a couple new concepts we need to do that:\n",
+    "We have made some progress but we still have not imposed the constraints we want on window size and polynomial order. There are a couple new concepts we need to do that:\n",
     "\n",
     "+ `Annotated` from Python's typing system lets you add additional information about the type of an item. Here we will use it to add information about the constraint on a field.\n",
-    "+ The `Field` class from pydantic is a class you use to add that extra information. There are a number of possible arguments to `Field`. Here we use `ge`, short for \"greater than or equal to,\" to impose the constraint that the `window_size` be larger greater than or equal to 2. The `Field` class from `pydantic` is somewhat similar to the [`field` class from Python's data classes](https://docs.python.org/3/library/dataclasses.html#dataclasses.field) which also serves the purpose of adding information about a typed field.\n",
+    "+ The `Field` class from pydantic is a class you use that contains that extra information. There are a number of possible arguments to `Field`. Here we use `ge`, short for \"greater than or equal to,\" to impose the constraint that the `window_size` be larger greater than or equal to 2. The `Field` class from `pydantic` is somewhat similar to the [`field` class from Python's data classes](https://docs.python.org/3/library/dataclasses.html#dataclasses.field) which also serves the purpose of adding information about a typed field.\n",
     "\n",
     "In the cell below we define a pydantic model that imposes the constraint that the `window_size` must be greater than or equal to 2. It does that by annotating the `window_size` type, `int`, with `Field(ge=2)`."
    ]
@@ -703,7 +738,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#TODO write answer "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -773,6 +810,123 @@
    "outputs": [],
    "source": [
     "DataSelectorModelDraft6()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Another benefit of pydantic: easy to save to a file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One additional benefit of using pydantic to model our control is that pydantic classes come with easy conversion to json, which is in turn easy to save to disk.\n",
+    "\n",
+    "We make a model in the cell below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = DataSelectorModelDraft6()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can convert this model to a few different forms:\n",
+    "\n",
+    "+ The `model_dump` method converts the pydantic model to a dictionary of values.\n",
+    "+ The `model_dump_json` method converts the pydantice model to json with the model's values.\n",
+    "+ The `model_json_schema` method produces a json schema for the model, which is a description of the model and its restrictions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(model.model_dump())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the indent argument causes the json to have line breaks, with the indentation\n",
+    "# of each new level given by indent\n",
+    "print(model.model_dump_json(indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.model_json_schema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You might not be surprised to learn that you can also create a model instance from json. In the cell below, we take the json from `model` and use it to create a new instance.\n",
+    "\n",
+    "To do that you use the class method `model_validate_json` to make the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_json = model.model_dump_json()\n",
+    "\n",
+    "# Use the class method model_validate_json to make a new model\n",
+    "new_model = DataSelectorModelDraft6.model_validate_json(model_json)\n",
+    "\n",
+    "new_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"my_selections.json\", \"w\") as f:\n",
+    "    f.write(model_json)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Though we will not have occasion to use it much in this tutorial, the next cell shows how to load the json from disk make a model from it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"my_selections.json\") as f:\n",
+    "    disk_json = f.read()\n",
+    "\n",
+    "DataSelectorModelDraft6.model_validate_json(disk_json)"
    ]
   },
   {
