--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Writing classes\n",
+    "## Writing classes in plain Python\n",
     "\n",
     "We being with a quick review of writing classes in Python. The smallest class you can write is below. It does not really do anything, but you can create instances of it."
    ]
@@ -99,7 +99,246 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Adding a method to the class\n",
+    "\n",
+    "A *method* is a function that is part of a class. There are a couple of variations on methods for classes, but for now we will stick to the most common kind, sometimes called an *instance method*. \n",
+    "\n",
+    "One special thing about methods: the first argument will be the instance of the class that is *bound* to the instance. That argument is almost universally called `self` in Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Basic:\n",
+    "    \"\"\"This basic class does almost nothing!\"\"\"\n",
+    "\n",
+    "    def say_hello(self, name):\n",
+    "        \"\"\"\n",
+    "        Print a greeting.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "\n",
+    "        name: str\n",
+    "            Name of the person to be greeted.\n",
+    "        \"\"\"\n",
+    "        print(f\"Hello {name}!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's call our method by creating an instance of the class and calling the method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basic = Basic()\n",
+    "basic.say_hello(\"coder\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subclasses\n",
+    "\n",
+    "Every class in Python is actually derived from another class, except for one class called `object`. A subclass has all of the attributes and methods of its parent. \n",
+    "\n",
+    "As an example of subclassing, we define a class below that builds on `Basic` by asking the user a question after greeting them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# HowYaDoing is the subclass, and Basic is its parent\n",
+    "class HowYaDoing(Basic):\n",
+    "    \"\"\"\n",
+    "    Ask the user how they are doing.\n",
+    "    \"\"\"\n",
+    "    # This method greets the user, then asks how they are doing.\n",
+    "    def howdy(self, name):\n",
+    "        \"\"\"\n",
+    "        Greet the user, then ask how they are doing.\n",
+    "\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "\n",
+    "        name: str\n",
+    "            Name of person to be greeted.\n",
+    "        \"\"\"\n",
+    "        # Start by saying hello -- HowYaDoing has a say_hello method from \n",
+    "        # the Basic class.\n",
+    "        self.say_hello(name)\n",
+    "\n",
+    "        print(f\"How are you doing, {name}?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using this class is a lot like using `Basic`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hiya = HowYaDoing()\n",
+    "hiya.howdy(\"coder\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding an attribute to a class\n",
+    "\n",
+    "Imagine we were going to extend this class by adding several more methods that each \"say\" something to the user, and that each of those will include the user's name. It would be convenient if the class just knew the name, something with can accomplish by adding an attribute to the class.\n",
+    "\n",
+    "Here we will add a name attribute to the `Basic` class. We will do that in a special method called `__init__` that is called when an instance of the class is created."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# It looks like Basic is not subclassing from anything, but in Python\n",
+    "# if an explicit superclass isn't given it is assumed to be object.\n",
+    "class Basic:\n",
+    "    \"\"\"This basic class does almost nothing!\"\"\"\n",
+    "\n",
+    "    # This is the new part\n",
+    "    def __init__(self, name):\n",
+    "        \"\"\"\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "\n",
+    "        name : str\n",
+    "            Name of the person to be greeted.\n",
+    "        \"\"\"\n",
+    "        self.name = name\n",
+    "\n",
+    "    # We do not need a name argument anymore\n",
+    "    def say_hello(self):\n",
+    "        \"\"\"\n",
+    "        Print a greeting.\n",
+    "        \"\"\"\n",
+    "        # self.name is defined in __init__, which is automatically called\n",
+    "        # when an instance of this class is created.\n",
+    "        print(f\"Hello {self.name}!\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The details of using this are a little different than our first implementation. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coder_greeter = Basic(\"coder\")\n",
+    "coder_greeter.say_hello()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To wrap this part up, let's rewrite the `HawYaDoing` class to use the `name` attribute. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HowYaDoing(Basic):\n",
+    "    \"\"\"\n",
+    "    Ask the user how they are doing.\n",
+    "    \"\"\"\n",
+    "    # This method greets the user, then asks how they are doing. We don't \n",
+    "    # need the name anymore since it is defined in Basic now.\n",
+    "    def howdy(self):\n",
+    "        \"\"\"\n",
+    "        Greet the user, then ask how they are doing.\n",
+    "        \"\"\"\n",
+    "        self.say_hello()\n",
+    "\n",
+    "        # Note we access the name via self        \n",
+    "        print(f\"How are you doing, {self.name}?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "howdy_coder = HowYaDoing(\"coder\")\n",
+    "howdy_coder.howdy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add another method to `HowYaDoing` that asks the user \"What is up?\" and includes their name in the question. Call the method `whats_up`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: write answer "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Firs draft of class to represent our data selector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Next, we write a class with a single attribute, called `year_range`. This is not the most compact or efficient way that a class that simply has one attribute could be written, but that is deliberate. Understanding the \"plainest\" way to do this will help motivate some of the shortcuts we see in a little bit.\n",
+    "\n",
+    "Unlike the `name` attribute above, a default value is provided for `year_range`.\n",
     "\n",
     "This class has a method called `__init__` that is called when the class is created. It is one of many special methods (called \"magic\" methods) recognized by Python.\n",
     "\n",
@@ -150,6 +389,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Comparing instances of a class\n",
+    "\n",
+    "You might expect that two instances of the class that have the same value for its attribute would be considered by Python to be equal. Let's give that a try."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sel_plain_2 = DataSelectorPlainPython(year_range_input=(1991, 2018))\n",
+    "sel_plain_3 = DataSelectorPlainPython(year_range_input=(1991, 2018))\n",
+    "\n",
+    "sel_plain_3 == sel_plain_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apparently Python does not see these as the same! We could fix that by implementing another magic method called `__eq__`, but it turns out there is an easier way, using data classes, that we will talk about shortly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercise"
    ]
   },
@@ -180,6 +447,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: write answer \n",
+    "\n",
     "class DataSelectorPlainPython:\n",
     "    \"\"\"\n",
     "    Partial implementation of a class to hold a data selector widget.\n",
@@ -202,6 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: write answer \n",
     "# your code here"
    ]
   },
@@ -217,34 +487,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "sel_plain_2 = DataSelectorPlainPython(year_range_input=(1991, 2018))\n",
-    "sel_plain_3 = DataSelectorPlainPython(year_range_input=(1991, 2018))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sel_plain_2 == selector_plain"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sel_plain_3 == sel_plain_2"
+    "# TODO: write answer "
    ]
   },
   {
@@ -345,13 +589,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO: write answer \n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Recall that testing for equality did not work the way we wanted for the plain Python version of our data selector. Try comparing the two selectors below with each and with `selector_dc` to see if equality testing works."
+    "2. Recall that testing for equality did not work the way we wanted for the plain Python version of our data selector. Try comparing the two selectors below with each other and with `selector_dc` to see if equality testing works."
    ]
   },
   {
@@ -370,16 +616,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sel_dc_2 == selector_dc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sel_dc_2 == sel_dc_3"
+    "# TODO: write answer\n",
+    "\n",
+    "# Put your comparisons here"
    ]
   },
   {
@@ -455,7 +694,7 @@
    "source": [
     "### Making a class using pydantic\n",
     "\n",
-    "One way to use pydantic to make a class is to import a class called `BaseModel` from it and subclass that. It ends up looking a lot like a data class:"
+    "One way to use pydantic to make a class is to import a class called `BaseModel` from it and subclass that. Classes made using pydantic are often called *models*, a term we will use for pydantic-based classes. It ends up looking a lot like a data class:"
    ]
   },
   {
@@ -502,7 +741,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO: write answer \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More ways to make an instance of a pydantic model"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -739,7 +987,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO write answer "
+    "# TODO: write answer "
    ]
   },
   {
@@ -809,7 +1057,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataSelectorModelDraft6()"
+    "# TODO: write answer "
    ]
   },
   {
