Fixed typo in call for answer to import in 02a_nbdev notebook.

--- a/02a_nbdev.ipynb
+++ b/02a_nbdev.ipynb
@@ -364,12 +364,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8c0f19f1-f4a8-4740-a069-d038e5d8b503",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %answer 02a/01.py\n",
+    "# %answer key/02a/01.py\n",
     "\n",
     "# import ..."
    ]
