I changed some wording vis a vis the need for debuggers, since I use debuggers within Jupyter all the time.

--- a/01a_getting_started.ipynb
+++ b/01a_getting_started.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "## Benefits of Developing in Jupyter Notebooks\n",
     "\n",
-    "1. Exploratory (iterative) programming (removes the need for debuggers)\n",
+    "1. Exploratory (iterative) programming (removes much of the need for debuggers)\n",
     "2. Literate programming (Knuth)\n",
     "3. Already familiar to scientists and data scientists\n",
     "4. **Ideal for visual outputs and widgets**"
