Add more about json_schema_extra

--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "[Pydantic](https://docs.pydantic.dev/latest/) is a data validation library in Python that provides a way to define data schemas in a way that is both Pythonic and easy to use. \n",
     "\n",
+    "**Note:** *We are using pydantic 2 in this tutorial! Many of the example will not work with pydantic 1.*\n",
+    "\n",
     "\n",
     "## TO DO IN THIS NOTEBOOK\n",
     "- [x] Note the problem of data validation and the complexity of the multiple observers pattern needed to handle that even for this relatively simple dashboard. We want to improve our previous dashboard by better handling data validation and more easily handling the generation of the settings UI.\n",
@@ -1064,7 +1066,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Another benefit of pydantic: easy to save to a file"
+    "## Another benefit of pydantic: easy to save model value to a file"
    ]
   },
   {
@@ -1089,11 +1091,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can convert this model to a few different forms:\n",
+    "We can convert this model to a couple of different forms:\n",
     "\n",
     "+ The `model_dump` method converts the pydantic model to a dictionary of values.\n",
-    "+ The `model_dump_json` method converts the pydantice model to json with the model's values.\n",
-    "+ The `model_json_schema` method produces a json schema for the model, which is a description of the model and its restrictions."
+    "+ The `model_dump_json` method converts the pydantic model to json with the model's values."
    ]
   },
   {
@@ -1181,6 +1182,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Yet another bonus: text representation of the model\n",
+    "\n",
+    "The `model_json_schema` method produces a json schema for the model, which is a description of the model and its restrictions.\n",
+    "\n",
+    "While we will not have much occasion to use the json schema directly, it is really important to understand how the next package we will take a look at, `ipyautoui`, generates a user interface from a pydantic model.\n",
+    "\n",
+    "The json schema for `DataSelectorModelDraft6` is below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.model_json_schema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can add extra keys to the json schema for a field by adding them a dictionary and using that dictionary as an argument in `Field`. The example below adds a key to the schema for `polynomial_order` noting that its value should be constrained by `window_size`, information not currently in the json schema."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make a dictionary....\n",
+    "schema_extra = dict(constraint_note=\"Polynomial order should be less than window size\")\n",
+    "\n",
+    "\n",
+    "class DataSelectorModelDraftWithExtra(BaseModel):\n",
+    "    year_range: tuple[int, int] = (1800, 2000)\n",
+    "    window_size: Annotated[int, Field(ge=2, le=100)] = 2\n",
+    "    # ...provide the dictionary to json_schema_extra\n",
+    "    polynomial_order: Annotated[int, Field(ge=1, le=10, json_schema_extra=schema_extra)] = 1\n",
+    "\n",
+    "    # mode=\"after\" means the validator runs after pydantic has checked that the individual\n",
+    "    # fields have values that are valid.\n",
+    "    @model_validator(mode=\"after\")\n",
+    "    def limit_polynomial_order(self):\n",
+    "        \n",
+    "        if self.polynomial_order > self.window_size - 1:\n",
+    "            # Handle a bad polynomial order or window size\n",
+    "            raise ValueError(\"Polynomial order must be smaller than window size\")\n",
+    "            \n",
+    "        # If we got this far the polynomial order is consistent with the window size\n",
+    "        # so return self. Failing to return self will end up causing an error.\n",
+    "        return self"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DataSelectorModelDraftWithExtra.model_json_schema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Use nbdev to export the code we want to reuse from this notebook "
    ]
   },
@@ -1190,6 +1266,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: write answer \n",
+    "\n",
     "from nbdev.export import nb_export\n",
     "\n",
     "nb_export('03a_pydantic.ipynb', 'dashboard')"
